--- a/src/components/sidebar/style/index.css
+++ b/src/components/sidebar/style/index.css
@@ -6,7 +6,12 @@
     flex-direction: column;
     flex-wrap: nowrap;
     justify-content: flex-start;
-    align-items: stretch;
-    align-content: stretch;
+    align-items: center;
+    align-content: center;
     overflow: auto;
 }
+ input{
+     margin: 5px 0 0 0;
+     width: 95%;
+     height: 30px;
+ }
