--- a/src/components/sidebar/style/index.css
+++ b/src/components/sidebar/style/index.css
@@ -13,5 +13,7 @@
  input{
      margin: 5px 0 0 0;
      width: 95%;
-     height: 30px;
+     position: sticky;
+     top: 0;
+     border: 3px solid black;
  }
