--- a/src/components/sidebar/style/index.css
+++ b/src/components/sidebar/style/index.css
@@ -1,7 +1,20 @@
-.sidebar{
-    width: 300px;
+.sidebar {
+    width: 35%;
     height: 100%;
     border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
+    align-items: center;
+    align-content: stretch;
+}
+
+.card-container {
+    width: 100%;
+    height: 90%;
+    border-top: 1px solid black;
+    padding-top: 5px;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -10,10 +23,23 @@
     align-content: center;
     overflow: auto;
 }
- input{
-     margin: 5px 0 0 0;
-     width: 95%;
-     position: sticky;
-     top: 0;
-     border: 3px solid black;
- }
+
+.search {
+    width: 100%;
+    height: 10%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
+    align-content: stretch;
+}
+
+input {
+    width: 90%;
+    height: 40px;
+}
+
+input:focus {
+    /*outline: none;*/
+}
