--- a/src/components/map/style/index.css
+++ b/src/components/map/style/index.css
@@ -6,7 +6,7 @@
 .iss-icon {
     width: 25px;
     height: 25px;
-    padding: 5px;
-    border: 2px solid red;
+    padding: 10px;
+    border: 2px solid grey;
     border-radius: 50%;
 }
