--- a/src/components/location/style/index.css
+++ b/src/components/location/style/index.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    justify-content: space-evenly;
+    justify-content: flex-start;
     align-items: center;
     align-content: stretch;
 }
@@ -15,6 +15,6 @@
     border-radius:50%;
     position: fixed;
     bottom: 50px;
-    right: 20px;
+    right: 50px;
     cursor: pointer;
 }
