--- a/src/components/sidebar/style/index.css
+++ b/src/components/sidebar/style/index.css
@@ -1,5 +1,6 @@
 .sidebar {
-    width: 35%;
+    width: 30%;
+    max-width: 300px;
     height: 100%;
     border: 1px solid black;
     display: flex;
@@ -14,7 +15,6 @@
     width: 100%;
     height: 90%;
     border-top: 1px solid black;
-    padding-top: 5px;
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
